# ts-shape

./: .pre-commit-config.yaml  CHANGES.txt  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: concept.md  contributing.md  index.md  migration.md
docs/assets/: architecture-graph.css  architecture-graph.js  architecture-sunburst.css  architecture-sunburst.js
docs/examples/: eventlog.md  index.md
docs/guides/: architecture-map.md  architecture.md  event-handling-flow.md  eventlog.md  feature-extraction.md  index.md  lambda-rules.md  loading.md  pipeline-builder.md  production.md  quality.md
docs/guides/eventlog/: adapters.md  index.md  objects.md  taxonomy.md
docs/insiders/: development.md
docs/javascripts/: pyodide-repl.js
docs/modules/production/: part-tracking.md
docs/modules/quality/: multi-sensor-validation.md  sensor-drift.md
docs/pipelines/: cycle-time-analysis.md  downtime-pareto.md  feature-pipeline.md  index.md  oee-dashboard.md  process-engineering.md  quality-spc.md
docs/research/: manufacturing-operations-research.md
docs/stylesheets/: extra.css
docs/usage/: index.md
docs/user_guide/: installation.md
examples/: README.md  correlation_events_demo.py  energy_events_demo.py  eventlog_demo.py  lambda_rules_demo.py  lambda_rules_demo.yaml  line_flow_analytics_demo.py  maintenance_events_demo.py  object_detection_demo.py  pipeline_demo.py  production_events_demo.py  quality_events_demo.py  supplychain_events_demo.py  unit_runtime_demo.py
scripts/: build_standalone_map.py  gen_architecture_graph.py  scan_deprecations.sh
src/ts_shape/: __init__.py  catalog.py  datasets.py  errors.py  pipeline.py
src/ts_shape/context/: value_mapping.py
src/ts_shape/eventlog/: __init__.py  adapters.py  align.py  archetypes.py  concat.py  flat.py  introspect.py  model.py  normalizer.py  objects.py  ocel.py  schema.py  taxonomy.py
src/ts_shape/eventlog/lambda_rules/: __init__.py  backtest.py  detector.py  evaluator.py  expression.py  loader.py  spec.py
src/ts_shape/events/: _output.py
src/ts_shape/events/correlation/: __init__.py  anomaly_correlation.py  signal_correlation.py
src/ts_shape/events/development/: __init__.py  critical_parameter_ranking.py  design_of_experiments.py  design_space.py  golden_batch.py  recipe_phase_adherence.py
src/ts_shape/events/energy/: __init__.py  carbon_intensity.py  consumption_analysis.py  efficiency_tracking.py  energy_performance_indicator.py  idle_energy_detection.py
src/ts_shape/events/engineering/: __init__.py  control_loop_health.py  disturbance_recovery.py  material_balance.py  operating_range.py  process_stability_index.py  process_window.py  rate_of_change.py  setpoint_events.py  signal_comparison.py  startup_events.py  steady_state_detection.py  threshold_monitoring.py  warmup_analysis.py
src/ts_shape/events/maintenance/: degradation_detection.py  failure_prediction.py  vibration_analysis.py
src/ts_shape/events/production/: __init__.py  alarm_management.py  batch_tracking.py  bottleneck_detection.py  changeover.py  continuous_process_alignment.py  cycle_time_tracking.py  downtime_tracking.py  duty_cycle.py  flow_constraints.py  flow_metrics.py  line_balancing.py  line_throughput.py  long_downtime_events.py  machine_state.py  micro_stop_detection.py  multi_process_traceability.py  oee_calculator.py  operator_performance.py  order_traceability.py  part_tracking.py  performance_loss.py  period_summary.py  quality_tracking.py  rework_tracking.py  routing_traceability.py  runtime_accounting.py  scrap_tracking.py  setup_time_tracking.py  shift_handover.py  shift_reporting.py  target_tracking.py
src/ts_shape/events/quality/: anomaly_classification.py  capability_trending.py  data_gap_analysis.py  gauge_repeatability.py  multi_sensor_validation.py  outlier_detection.py  sensor_drift.py  signal_quality.py  statistical_process_control.py  tolerance_deviation.py  value_distribution.py
src/ts_shape/events/supplychain/: __init__.py  demand_pattern.py  inventory_monitoring.py  lead_time_analysis.py
src/ts_shape/features/: cross_signal.py  export.py  pattern_recognition.py
src/ts_shape/features/cycles/: cycle_processor.py  cycles_extractor.py
src/ts_shape/features/segment_analysis/: __init__.py  feature_pipeline.py  profile_comparison.py  segment_extractor.py  segment_processor.py  time_windowed_features.py
src/ts_shape/features/stats/: boolean_stats.py  feature_table.py  numeric_stats.py  string_stats.py  timestamp_stats.py
src/ts_shape/loader/: __init__.py  _utils.py
src/ts_shape/transform/: harmonization.py
src/ts_shape/utils/: base.py
tests/: conftest.py  test_anomaly_classification.py  test_azure_blob_energy_loader.py  test_azure_blob_loader.py  test_base.py  test_boolean_filter.py  test_bottleneck_detection.py  test_capability_trending.py  test_catalog.py  test_context_enricher.py  test_continuous_process_alignment.py  test_correlation_events.py  test_cross_signal.py  test_custom_filter.py  test_cycles.py  test_data_gap_analysis.py  test_databricks_spark_parquet_loader.py  test_databricks_unity_energy_loader.py  test_databricks_unity_parquet_loader.py  test_datasets.py  test_detector_registry_conformance.py  test_development_events.py  test_downtime_quality.py  test_duty_cycle.py  test_edge_cases.py  test_energy_api_loader.py  test_energy_events.py  test_energy_new_classes.py  test_engineering_control_loop_health.py  test_engineering_disturbance_recovery.py  test_engineering_material_balance.py  test_engineering_operating_range.py  test_engineering_process_stability.py  test_engineering_process_window.py  test_engineering_setpoint.py  test_engineering_signal_comparison.py  test_engineering_startup.py  test_engineering_steady_state.py  test_engineering_warmup.py  test_feature_pipeline.py  (+60 more)
tests/eventlog/: conftest.py  test_adapter_coverage.py  test_adapters.py  test_align.py  test_end_to_end.py  test_flat_and_ocel.py  test_lambda_rules.py  test_model.py  test_objects.py  test_perf.py  test_polish.py  test_relate.py  test_schema.py
(+26 files in other folders)
