[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_shape"
dynamic = ["version"]
description = "ts-shape filters, transforms and engineers your timeseries dataframe"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jakob Gabriel", email = "jakob.gabriel5@googlemail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.1.0",
    "scipy>=1.13.1",
    "s3fs>=2024.10.0",
    "numpy>=1.26.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.32",
    "azure-storage-blob>=12.19.1",
]

[project.urls]
Homepage = "https://ts-shape.github.io/ts-shape/"
Repository = "https://github.com/ts-shape/ts-shape"
"Bug Tracker" = "https://github.com/ts-shape/ts-shape/issues"

[project.optional-dependencies]
azure = [
    "azure-storage-blob>=12.19.1",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocs-literate-nav",
    "mkdocs-gen-files",
    "mkdocs-callouts",
    "mkdocstrings[python]>=0.24",
    "black==26.3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black==26.3.1",
    "ruff==0.15.8",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "pint>=0.24",
]
ml = [
    "scikit-learn>=1.3.0",
]
units = [
    "pint>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ts_shape = ["py.typed"]

[tool.setuptools-scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["ts_shape"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Fail the build if total coverage regresses below this floor. Set just under
# the current measured level; ratchet upward as coverage improves.
fail_under = 80

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# "UP" = pyupgrade, "I" = isort (import sorting & grouping, black-compatible).
extend-select = ["UP", "I"]

[tool.ruff.lint.isort]
known-first-party = ["ts_shape"]

[tool.mypy]
python_version = "3.11"
files = ["src/ts_shape"]
ignore_missing_imports = true
enable_error_code = ["deprecated"]
# Global baseline — cheap, high-signal checks the whole tree already passes.
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true

# --- Strict allowlist -------------------------------------------------------
# Modules held to full strict typing. Add a module here once it is clean under
# these flags; the goal is to grow this list until it becomes the global
# default. See docs/insiders/development.md for the chip-away workflow.
[[tool.mypy.overrides]]
module = [
    "ts_shape.loader._utils",
    "ts_shape.events._output",
    "ts_shape.loader.timeseries.parquet_loader",
    "ts_shape.loader.timeseries.s3proxy_parquet_loader",
    "ts_shape.loader.timeseries.databricks_spark_parquet_loader",
    "ts_shape.features.cycles.cycles_extractor",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true

# --- Typing debt ------------------------------------------------------------
# These modules predate strict typing and still report errors under the global
# config above. They are quarantined so `mypy src/ts_shape` is green and can
# gate CI. To chip away: remove a module from this list, fix the errors, and
# (ideally) promote it into the strict allowlist.
[[tool.mypy.overrides]]
module = [
    "ts_shape.pipeline",
    "ts_shape.eventlog.adapters",
    "ts_shape.eventlog.normalizer",
    "ts_shape.eventlog.lambda_rules.evaluator",
    "ts_shape.features.cross_signal",
    "ts_shape.features.export",
    "ts_shape.features.pattern_recognition",
    "ts_shape.features.segment_analysis.segment_extractor",
    "ts_shape.features.stats.feature_table",
    "ts_shape.features.stats.numeric_stats",
    "ts_shape.features.stats.string_stats",
    "ts_shape.transform.calculator.unit_conversion",
    "ts_shape.transform.filter.datetime_filter",
    "ts_shape.transform.time_functions.timezone_shift",
    "ts_shape.events.engineering.process_stability_index",
    "ts_shape.events.maintenance.degradation_detection",
    "ts_shape.events.production.line_balancing",
    "ts_shape.events.production.quality_tracking",
    "ts_shape.events.quality.tolerance_deviation",
]
ignore_errors = true
